--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -40,21 +40,25 @@
   font-size: 24px;
   line-height: 133%;
   text-align: center;
-  width: 292px;
-  height: 80px;
   background-color: #fff;
   border: 2px solid #fff;
   color: #000;
+  padding: 0 20px;
+  width: auto;
+  min-width: 292px;
+  height: auto;
+  min-height: 80px;
   z-index: 1;
 }
 
 .line {
   position: absolute;
   top: 50%;
-  left: -459px;
-  width: 1210px;
+  left: 50%;
+  width: 200%;
+  min-width: 1210px;
   height: 2px;
   background-color: white;
-  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
   z-index: -1;
 }
