--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -14,17 +14,27 @@
 }
 
 .lead__title-text {
-  margin: 0 auto;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 120px;
-  line-height: 100%;
+  line-height: 1;
   letter-spacing: -0.04em;
   text-transform: uppercase;
-  text-align: center;
   color: #fff;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 1824px;
 }
 
+.inline-img {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+  margin-left: 28px;
+  margin-right: 28px;
+}
+
+/* BUTTON */
 .lead__callback {
   padding-top: 96px;
   display: flex;
@@ -35,20 +45,41 @@
 
 .button__callback {
   position: relative;
+  display: inline-block;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 24px;
-  line-height: 133%;
+  line-height: 1.33;
   text-align: center;
   background-color: #fff;
-  border: 2px solid #fff;
   color: #000;
-  padding: 0 20px;
-  width: auto;
-  min-width: 292px;
-  height: auto;
-  min-height: 80px;
-  z-index: 1;
+  border: none;
+  padding: 0 40px;
+  height: 80px;
+  max-width: 1210px;
+}
+
+.button__callback::before,
+.button__callback::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 0;
+  height: 100%;
+}
+
+.button__callback::before {
+  left: -40px;
+  border-left: 40px solid #fff;
+  border-top: 0 solid transparent;
+  border-bottom: 0 solid transparent;
+  clip-path: polygon(100% 0, 0 50%, 100% 100%);
+}
+
+.button__callback::after {
+  right: -40px;
+  border-right: 40px solid #fff;
+  clip-path: polygon(0 0, 100% 50%, 0 100%);
 }
 
 .line {
@@ -57,6 +88,7 @@
   left: 50%;
   width: 200%;
   min-width: 1210px;
+  max-width: 1824px;
   height: 2px;
   background-color: white;
   transform: translate(-50%, -50%);
